# MultiPARC

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
src/multiparc/: PARCv2.py  _version.py  boundary_conditions.py
src/multiparc/differentiator/: advection.py  differentiator.py  diffusion.py  finitedifference.py  mappingandrecon.py
src/multiparc/integrator/: integrator.py  rk4.py
src/multiparc/utility/: blurpool.py  multires.py  resnet.py  spade.py  unet.py
tests/: test_000import.py  test_baseline.py  test_mrparcv2.py  test_skip_spade.py
