[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "multiparc"
dynamic = ["version"]
description = "Physics-aware recurrent convolutional neural network: baseline and variants"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Xinlun Cheng", email = "xc7ts@virginia.edu" }]
dependencies = [
    "torch>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/chengxinlun/MultiPARC"
Issues = "https://github.com/chengxinlun/MultiPARC/issues"

[tool.hatch.build]
packages = ["src/multiparc"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/multiparc/_version.py"